# campus-rag-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
sample_docs/: campus_policy.md
src/rag_app/: __init__.py  cli.py
src/rag_app/api/: main.py
src/rag_app/core/: __init__.py  documents.py  index.py  rag.py
src/rag_app/ui/: streamlit_app.py
tests/: test_rag_core.py
